# freeswitchrs

./: Cargo.toml  README.md  TODO
examples/: Cargo.toml  mod_skelr.rs
src/: lib.rs  mods.rs  raw.rs
