[package]
name = "mod_skelr"
version = "0.1.0"
authors = ["Michael Giagnocavo <mgg@giagnocavo.net>"]

[dependencies]
libc = "0.2"

[dependencies.freeswitchrs]
path = ".."

[lib]
crate-type = ["dylib"]
name = "mod_skelr"
path = "mod_skelr.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

